Updated Digital Banking System